Bug 295826 - Crash when pressing "enter" with the Statuses menu selected
Summary: Crash when pressing "enter" with the Statuses menu selected
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.3.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
: 299716 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-12 11:34 UTC by Marcus Harrison
Modified: 2012-07-06 12:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Harrison 2012-03-12 11:34:08 UTC
Application: ktp-contactlist (0.3)
KDE Platform Version: 4.8.1 (4.8.1)
Qt Version: 4.8.0
Operating System: Linux 3.0.0-16-generic i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed:

When the Status menu at the top of the contact list has focus but is not in text mode, simply pressing Enter caused this crash.

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Telepathy Contact List (ktp-contactlist), signal: Segmentation fault
[KCrash Handler]
#7  QLineEdit::text (this=0x0) at widgets/qlineedit.cpp:380
#8  0x0807a8ca in GlobalPresenceChooser::event (this=0x9ada800, e=0xbf916794) at /build/buildd/ktp-contact-list-0.3.0/global-presence-chooser.cpp:274
#9  0x0182d844 in notify_helper (e=0xbf916794, receiver=0x9ada800, this=0x99b0be8) at kernel/qapplication.cpp:4555
#10 QApplicationPrivate::notify_helper (this=0x99b0be8, receiver=0x9ada800, e=0xbf916794) at kernel/qapplication.cpp:4527
#11 0x018337d8 in QApplication::notify (this=0xbf916644, receiver=0x9ada800, e=0xbf916794) at kernel/qapplication.cpp:3996
#12 0x003aa051 in KApplication::notify (this=0xbf917168, receiver=0x9ada800, event=0xbf916794) at ../../kdeui/kernel/kapplication.cpp:311
#13 0x0111418e in QCoreApplication::notifyInternal (this=0xbf917168, receiver=0x9ada800, event=0xbf916794) at kernel/qcoreapplication.cpp:876
#14 0x0182b91d in sendSpontaneousEvent (event=0xbf916794, receiver=0x9ada800) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#15 qt_sendSpontaneousEvent (receiver=0x9ada800, event=0xbf916794) at kernel/qapplication.cpp:5549
#16 0x018de931 in QKeyMapper::sendKeyEvent (keyWidget=0x9ada800, grab=false, type=QEvent::KeyPress, code=16777220, modifiers=) at kernel/qkeymapper_x11.cpp:1866
#17 0x018deddb in QKeyMapperPrivate::translateKeyEvent (this=0x99e61d8, keyWidget=0x9ada800, event=0xbf916dbc, grab=false) at kernel/qkeymapper_x11.cpp:1836
#18 0x018b649d in QApplication::x11ProcessEvent (this=0xbf917168, event=0xbf916dbc) at kernel/qapplication_x11.cpp:3625
#19 0x018e33dc in x11EventSourceDispatch (s=0x99bf668, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#20 0x0604625f in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#21 0x06046990 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#22 0x06046c2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#23 0x01147167 in QEventDispatcherGlib::processEvents (this=0x99917b0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#24 0x018e2fda in QGuiEventDispatcherGlib::processEvents (this=0x99917b0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#25 0x01112d1d in QEventLoop::processEvents (this=0xbf9170c4, flags=...) at kernel/qeventloop.cpp:149
#26 0x01112fb9 in QEventLoop::exec (this=0xbf9170c4, flags=...) at kernel/qeventloop.cpp:204
#27 0x011186ca in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#28 0x0182b6a4 in QApplication::exec () at kernel/qapplication.cpp:3816
#29 0x0805d237 in main (argc=) at /build/buildd/ktp-contact-list-0.3.0/main.cpp:62

Reported using DrKonqi
Comment 1 Daniele E. Domenichelli 2012-03-12 14:10:52 UTC
Confirmed in latest master
Comment 2 Martin Klapetek 2012-03-12 14:39:58 UTC
Git commit 4ab2aac466db8fcfd82eca5208cdcf045cb0c97c by Martin Klapetek.
Committed on 12/03/2012 at 15:39.
Pushed by mklapetek into branch 'master'.

Don't crash when pressing enter on the presence chooser

Reviewed-by: Daniele E. Domenichelli

M  +4    -2    global-presence-chooser.cpp

http://commits.kde.org/telepathy-contact-list/4ab2aac466db8fcfd82eca5208cdcf045cb0c97c
Comment 3 Martin Klapetek 2012-05-10 21:36:34 UTC
*** Bug 299716 has been marked as a duplicate of this bug. ***