Don't crash when pressing enter on the presence chooser

Reviewed-by: Daniele E. Domenichelli
BUG: 295826